--- a/app/src/main/res/layout/activity_register_event.xml
+++ b/app/src/main/res/layout/activity_register_event.xml
@@ -43,7 +43,7 @@
                 app:layout_constraintBottom_toTopOf="@id/tv_register_img"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_back_home" />
 
             <TextView
                 android:id="@+id/tv_register_img"
