--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
         <EditText
             android:id="@+id/et_email_login"
             style="@style/edit_text"
-            android:drawableRight="@drawable/ic_email"
+            android:drawableEnd="@drawable/ic_email"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
@@ -45,7 +45,7 @@
             android:id="@+id/et_password_login"
             style="@style/edit_text"
             android:layout_marginTop="15dp"
-            android:drawableRight="@drawable/ic_eye"
+            android:drawableEnd="@drawable/ic_eye"
             android:hint="@string/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
