--- a/app/src/main/res/layout/dialog_buy_ticket.xml
+++ b/app/src/main/res/layout/dialog_buy_ticket.xml
@@ -13,19 +13,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="6dp"
+            android:src="@drawable/ic_close"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_close" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_event_ticket"
-            android:layout_width="411dp"
+            android:layout_width="0dp"
             android:layout_height="260dp"
-            android:layout_marginTop="6dp"
-            android:src="@drawable/event_test_img"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_close_ticket" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_close_ticket"
+            tools:src="@drawable/event_test_img" />
 
         <TextView
             android:id="@+id/tv_name_event_ticket"
