--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".splash.SplashActivity">
+        tools:context=".presentation.splash.view.SplashActivity">
 
         <ImageView
             android:id="@+id/iv_logo_register"
