--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,10 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/profile"
+        android:title="@string/profile" />
 
     <item
         android:id="@+id/create_event"
         android:title="@string/btn_register_event_home" />
+
     <item
         android:id="@+id/logout"
         android:title="@string/logout" />
